@@ -190,6 +190,8 @@ PIG-2228: support partial aggregation in map task (thejas)
 
 BUG FIXES
 
+PIG-2578: Multiple Store-commands mess up mapred.output.dir. (daijy)
+
 PIG-2652: Skew join and order by don't trigger reducer estimation (billgraham via dvryaboy)
 
 PIG-2623: Support S3 paths for registering UDFs (nshkrob via daijy)
